--- a/TSEWATCH/src/main/resources/AddClient.fxml
+++ b/TSEWATCH/src/main/resources/AddClient.fxml
@@ -1,42 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="130.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.AddClientController">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="218.0" prefWidth="355.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.AddClientController">
    <children>
-      <VBox layoutX="23.0" layoutY="14.0" spacing="10.0">
+      <Pane opacity="0.76" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="94.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Pane layoutX="-44.0" layoutY="56.0" opacity="0.29" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #bbebec;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="124.0" />
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="20.0">
          <children>
-            <HBox>
+            <HBox layoutX="11.0" layoutY="45.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="97.0" text="Nom du client : ">
+                  <Label prefHeight="27.0" prefWidth="122.0" text="Nom du client : ">
                      <effect>
                         <Blend />
-                     </effect></Label>
-                  <TextField fx:id="clientText" />
+                     </effect>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField />
                </children>
             </HBox>
-            <HBox>
+            <HBox layoutX="11.0" layoutY="89.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="98.0" text="Adresse Email : ">
+                  <Label prefHeight="27.0" prefWidth="123.0" text="Adresse Email : ">
                      <effect>
                         <Blend />
-                     </effect></Label>
-                  <TextField fx:id="emailText" />
+                     </effect>
+                     <font>
+                        <Font name="System Font" size="14.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField />
+               </children>
+            </HBox>
+            <HBox layoutX="169.0" layoutY="134.0" spacing="8.0">
+               <children>
+                  <JFXButton fx:id="btn_ac_cancel" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="59.0" text="Button" textFill="WHITE">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="WINDOW_CLOSE" size="20" />
+                     </graphic></JFXButton>
+                  <JFXButton fx:id="btn_ac_ok" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="59.0" textFill="WHITE">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="CHECK" size="20" />
+                     </graphic></JFXButton>
                </children>
             </HBox>
          </children>
-      </VBox>
-      <HBox layoutX="156.0" layoutY="89.0" spacing="20.0">
-         <children>
-            <Button fx:id="ACAnnulerButton" cancelButton="true" mnemonicParsing="false" onAction="#ACAnnulerButtonClicked" text="Annuler" />
-            <Button fx:id="ACAjouterButton" defaultButton="true" mnemonicParsing="false" text="Ajouter" />
-         </children>
-      </HBox>
+      </Pane>
    </children>
 </AnchorPane>
