--- a/TSEWATCH/src/main/resources/AddReport.fxml
+++ b/TSEWATCH/src/main/resources/AddReport.fxml
@@ -1,24 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="163.0" prefWidth="306.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.AddReportController">
+<AnchorPane prefHeight="218.0" prefWidth="355.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.AddReportController">
    <children>
-      <HBox layoutX="167.0" layoutY="110.0" spacing="10.0">
+      <Pane prefHeight="94.0" prefWidth="355.0" style="-fx-background-color: #bbebec;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Pane layoutX="43.0" layoutY="-37.0" opacity="0.76" prefHeight="124.0" prefWidth="355.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Pane prefHeight="134.0" prefWidth="313.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="20.0">
          <children>
-            <Button fx:id="ARAnnulerButton" cancelButton="true" mnemonicParsing="false" onAction="#ARAnnulerButtonClicked" text="Annuler" />
-            <Button fx:id="NBOkButton" defaultButton="true" mnemonicParsing="false" text="OK" />
+            <HBox layoutX="22.0" layoutY="62.0" spacing="10.0">
+               <children>
+                  <Label prefHeight="27.0" prefWidth="98.0" text="Nom de rapport">
+                     <font>
+                        <Font name="Arial Black" size="11.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField />
+               </children>
+            </HBox>
+            <HBox layoutX="156.0" layoutY="119.0" spacing="10.0">
+               <children>
+                  <JFXButton fx:id="btn_ar_cancel" alignment="CENTER" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="37.0" text="Cancel" textFill="WHITE">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="WINDOW_CLOSE" size="20" />
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btn_ar_ok" onAction="#handleButtonAction" text="OK" textFill="WHITE">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="CHECK" size="20" />
+                     </graphic>
+                  </JFXButton>
+               </children>
+            </HBox>
          </children>
-      </HBox>
-      <HBox layoutX="28.0" layoutY="62.0">
-         <children>
-            <Label prefHeight="26.0" prefWidth="98.0" text="Nom de rapport" />
-            <TextField alignment="CENTER" />
-         </children>
-      </HBox>
+      </Pane>
    </children>
 </AnchorPane>
