--- a/TSEWATCH/src/main/resources/AddClient.fxml
+++ b/TSEWATCH/src/main/resources/AddClient.fxml
@@ -16,27 +16,27 @@
       <Pane layoutX="-44.0" layoutY="56.0" opacity="0.29" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #bbebec;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="124.0" />
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="20.0">
          <children>
-            <HBox layoutX="11.0" layoutY="45.0">
+            <HBox layoutX="22.0" layoutY="48.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="122.0" text="Nom du client : ">
+                  <Label text="Nom du client : ">
                      <effect>
                         <Blend />
                      </effect>
                      <font>
-                        <Font size="14.0" />
+                        <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
                   <JFXTextField />
                </children>
             </HBox>
-            <HBox layoutX="11.0" layoutY="89.0">
+            <HBox layoutX="23.0" layoutY="89.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="123.0" text="Adresse Email : ">
+                  <Label text="Adresse Email : ">
                      <effect>
                         <Blend />
                      </effect>
                      <font>
-                        <Font name="System Font" size="14.0" />
+                        <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
                   <JFXTextField />
