--- a/TSEWATCH/src/main/resources/AddReport.fxml
+++ b/TSEWATCH/src/main/resources/AddReport.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.scene.control.Label?>
@@ -15,7 +16,7 @@
       <Pane layoutX="43.0" layoutY="-37.0" opacity="0.76" prefHeight="124.0" prefWidth="355.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Pane prefHeight="134.0" prefWidth="313.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="20.0">
          <children>
-            <HBox layoutX="16.0" layoutY="66.0" spacing="10.0">
+            <HBox layoutX="14.0" layoutY="30.0" spacing="10.0">
                <children>
                   <Label contentDisplay="TOP" text="Nom de rapport:">
                      <font>
@@ -37,6 +38,16 @@
                         <MaterialDesignIconView glyphName="CHECK" size="20" />
                      </graphic>
                   </JFXButton>
+               </children>
+            </HBox>
+            <HBox layoutX="23.0" layoutY="78.0" prefHeight="23.0" prefWidth="267.0" spacing="25.0">
+               <children>
+                  <Label contentDisplay="TOP" text="Axe de veille">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXComboBox prefHeight="23.0" prefWidth="148.0" />
                </children>
             </HBox>
          </children>
