--- a/TSEWATCH/src/main/resources/AddReport.fxml
+++ b/TSEWATCH/src/main/resources/AddReport.fxml
@@ -47,7 +47,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXComboBox prefHeight="23.0" prefWidth="148.0" />
+                  <JFXComboBox fx:id="comboBox_AR" onMouseClicked="#comboBoxClickOn" prefHeight="23.0" prefWidth="148.0" />
                </children>
             </HBox>
          </children>
