--- a/TSEWATCH/src/main/resources/Home.fxml
+++ b/TSEWATCH/src/main/resources/Home.fxml
@@ -118,56 +118,6 @@
             </JFXButton>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="diffusion_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox layoutX="211.0" layoutY="61.0">
-               <children>
-                  <Label text="Liste de diffusion : ">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <JFXComboBox prefHeight="20.0" prefWidth="218.0" />
-               </children>
-            </HBox>
-            <TableView layoutX="66.0" layoutY="93.0" prefHeight="373.0" prefWidth="679.0">
-              <columns>
-                <TableColumn prefWidth="343.0" text="Client">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="ACCOUNT" size="20" />
-                     </graphic>
-                  </TableColumn>
-                <TableColumn minWidth="0.0" prefWidth="335.0" text="Email">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="GMAIL" size="20" />
-                     </graphic>
-                  </TableColumn>
-              </columns>
-            </TableView>
-            <JFXButton fx:id="btn_envoyer" layoutX="684.0" layoutY="472.0" onAction="#handleButtonAction" ripplerFill="#1d14c3" text="Envoyer" textFill="WHITE">
-               <graphic>
-                  <MaterialDesignIconView glyphName="SEND" size="20" />
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="btn_add_client" alignment="BASELINE_LEFT" layoutX="748.0" layoutY="110.0" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="50.0" ripplerFill="#0747a6" text="Ajouter" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-               <graphic>
-                  <MaterialDesignIconView glyphName="ACCOUNT_PLUS" size="20" wrappingWidth="20.0" />
-               </graphic>
-            </JFXButton>
-            <JFXButton layoutX="745.0" layoutY="157.0" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="25.0" ripplerFill="#0748a4" text="Modifier" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </JFXButton>
-            <Pane layoutX="44.0" layoutY="14.0" prefHeight="12.0" prefWidth="859.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-            <Pane layoutX="700.0" layoutY="14.0" opacity="0.5" prefHeight="12.0" prefWidth="159.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Pane layoutX="562.0" layoutY="14.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <MaterialDesignIconView glyphName="DELETE" layoutX="760.0" layoutY="179.0" size="20" wrappingWidth="20.0" />
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="add_pane" prefHeight="424.0" prefWidth="781.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="286.0" opacity="0.32" prefHeight="424.0" prefWidth="499.0" style="-fx-background-color: #000;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="286.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0" />
@@ -373,6 +323,78 @@
             <Pane layoutX="65.0" layoutY="25.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <Pane layoutX="172.0" layoutY="21.0" opacity="0.5" prefHeight="12.0" prefWidth="150.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <Pane layoutX="29.0" layoutY="26.0" prefHeight="12.0" prefWidth="860.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="diffusion_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox layoutX="211.0" layoutY="61.0">
+               <children>
+                  <Label text="Liste de diffusion : ">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <JFXComboBox fx:id="list_diffusion" prefHeight="20.0" prefWidth="218.0" />
+               </children>
+            </HBox>
+            <TableView fx:id="clientTableView" layoutX="66.0" layoutY="93.0" prefHeight="373.0" prefWidth="679.0">
+              <columns>
+                <TableColumn prefWidth="343.0" text="Client">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="ACCOUNT" size="20" />
+                     </graphic>
+                  </TableColumn>
+                <TableColumn minWidth="0.0" prefWidth="335.0" text="Email">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="GMAIL" size="20" />
+                     </graphic>
+                  </TableColumn>
+              </columns>
+            </TableView>
+            <JFXButton fx:id="btn_envoyer" layoutX="684.0" layoutY="472.0" onAction="#handleButtonAction" ripplerFill="#1d14c3" text="Envoyer" textFill="WHITE">
+               <graphic>
+                  <MaterialDesignIconView glyphName="SEND" size="20" />
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="btn_add_client" alignment="BASELINE_LEFT" layoutX="748.0" layoutY="110.0" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="50.0" ripplerFill="#0747a6" text="Ajouter" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <MaterialDesignIconView glyphName="ACCOUNT_PLUS" size="20" wrappingWidth="20.0" />
+               </graphic>
+            </JFXButton>
+            <JFXButton layoutX="745.0" layoutY="157.0" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="25.0" ripplerFill="#0748a4" text="Modifier" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </JFXButton>
+            <Pane layoutX="44.0" layoutY="14.0" prefHeight="12.0" prefWidth="859.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Pane layoutX="700.0" layoutY="14.0" opacity="0.5" prefHeight="12.0" prefWidth="159.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane layoutX="562.0" layoutY="14.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <MaterialDesignIconView glyphName="DELETE" layoutX="760.0" layoutY="179.0" size="20" wrappingWidth="20.0" />
+            <HBox layoutX="97.0" layoutY="55.0" spacing="2.0" />
+            <JFXButton fx:id="btn_modify_listd" layoutX="579.0" layoutY="61.0" onAction="#handleButtonAction" prefHeight="20.0" prefWidth="16.0" ripplerFill="#f81212" text="..." textFill="WHITE">
+               <graphic>
+                  <MaterialDesignIconView glyphName="SETTINGS" />
+               </graphic>
+            </JFXButton>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="addLd_pane" layoutX="242.0" opacity="0.82" prefHeight="551.0" prefWidth="859.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox layoutX="284.0" layoutY="94.0" prefHeight="23.0" prefWidth="291.0" spacing="12.0">
+               <children>
+                  <JFXButton fx:id="btn_not_create" onAction="#handleButtonAction" text=" ">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="KEYBOARD_BACKSPACE" size="15" />
+                     </graphic>
+                  </JFXButton>
+                  <JFXTextField fx:id="nameLd" focusColor="BLACK" opacity="0.8" prefHeight="23.0" prefWidth="96.0" style="-fx-background-color: #54ccfc;" unFocusColor="BLACK" />
+                  <JFXButton fx:id="btn_add_diffusion" onAction="#handleButtonAction" style="-fx-background-color: #54ccfc;" text="Add" />
+                  <JFXButton fx:id="btn_delete_diffusion" onAction="#handleButtonAction" style="-fx-background-color: #54ccfc;" text="Delete" />
+               </children>
+            </HBox>
          </children>
       </AnchorPane>
    </children>
