TSEWatch Betav0.0.3 (add send emails/report preview) function

--- a/TSEWATCH/src/main/resources/SendMail.fxml
+++ b/TSEWATCH/src/main/resources/SendMail.fxml
@@ -49,6 +49,11 @@
                   </JFXButton>
                </children>
             </HBox>
+            <JFXButton fx:id="btn_preview" layoutX="298.0" layoutY="30.0" onAction="#handleButtonAction" prefHeight="18.0" prefWidth="31.0" text=" ">
+               <graphic>
+                  <MaterialDesignIconView glyphName="EYE" size="15" />
+               </graphic>
+            </JFXButton>
          </children>
       </Pane>
    </children>
